--- a/src/components/myheader.css
+++ b/src/components/myheader.css
@@ -3,7 +3,7 @@
   	align-items: center;
 	justify-content: center;
   	color: white;
-	margin-top:20px;
+/*	margin-top:20px;*/
 	margin-bottom:-15px;
 }
 
